--- a/his-system/src/main/resources/application-dev.yml
+++ b/his-system/src/main/resources/application-dev.yml
@@ -28,3 +28,7 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:/mapper/xml/*.xml
+  global-config:
+    db-config:
+      logic-delete-value: 1
+      logic-not-delete-value: 0
