--- a/his-common/pom.xml
+++ b/his-common/pom.xml
@@ -37,6 +37,14 @@
             <version>2.5.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
+<!--        <dependency>-->
+<!--            <groupId>com.belerweb</groupId>-->
+<!--            <artifactId>pinyin4j</artifactId>-->
+<!--            <version>2.5.0</version>-->
+<!--        </dependency>-->
+
         <!-- redis相关的jar -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
